--- a/index.html
+++ b/index.html
@@ -20,6 +20,55 @@
     </header>
     
     <main>
+        <!-- sezione "le mie spese" -->
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <td><strong>Numero</strong></td>
+                        <td><strong>Descrizione</strong></td>
+                        <td><strong>Costo</strong></td>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 €</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 €</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 €</td>
+                    </tr>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tbody>
+
+            </table>
+        </section>
+
+
+
+
+        <!-- sezione "cose da fare" -->
+        <section>
+
+        </section>
+
+        <!-- sezione "info utili" -->
+        <section>
+
+        </section>
 
     </main>
     
