--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <main>
         <!-- sezione "le mie spese" -->
         <section>
+            <h2>Le mie spese</h2>
             <table>
                 <thead>
                     <tr>
@@ -57,11 +58,15 @@
             </table>
         </section>
 
-
-
-
         <!-- sezione "cose da fare" -->
         <section>
+            <h2>Cose da fare</h2>
+            <ul>
+                <li>Visitare la tower of London &#10005;</li>
+                <li>Visitare Greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico fish and chips Inglese &#10005</li>
+            </ul>
 
         </section>
 
