--- a/index.html
+++ b/index.html
@@ -72,7 +72,25 @@
 
         <!-- sezione "info utili" -->
         <section>
-
+            <h2>Info utili:</h2>
+            <ol>
+                <li>Numeri utili di emergenza</li>
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero Polizia</li>
+                        <li><strong>111</strong> - Numero Assistenza medica</li>
+                    </ul>
+                <li>Hotel</li>
+                    <ul>
+                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo Hotel:</strong> Houses of Parliament Londra SW1A 0AA</li>
+                    </ul>
+                <li>Aereo</li>
+                    <ul>
+                        <li><strong>Volo di andata:</strong> Y1234 ore 09:30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno:</strong> Y5678 ore 18:30 da London Heathrow</li>
+                    </ul>
+            </ol>
         </section>
 
     </main>
