--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>Il mio Viaggio a Londra</h1>
         <!-- sezione immagini di copertina -->
         <section>
-            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
-            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London Eye">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Fiume tamigi">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="palazzo di westminster">
         </section>
-
+        <hr>
     </header>
     
     <main>
@@ -56,6 +56,7 @@
                 </tbody>
 
             </table>
+            <hr>
         </section>
 
         <!-- sezione "cose da fare" -->
@@ -67,7 +68,7 @@
                 <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
                 <li>Mangiare il tipico fish and chips Inglese &#10005</li>
             </ul>
-
+            <hr>
         </section>
 
         <!-- sezione "info utili" -->
@@ -93,13 +94,14 @@
             </ol>
         </section>
 
+        <hr>
     </main>
     
     <!-- footer galleria -->
     <footer>
         <h2>Le mie foto</h2>
-        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
-        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Millennium Bridge">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower Bridge">
     </footer>
 </body>
 </html>
